--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <div id="header">
       <img id="profile-pic" src="/images/header_step0.svg" />
     </div>
-    <div id="cause-scroll-div"></div>
-    <script src="/script.js"></script>
+    <div id="cause-scroll-div">
+      <nav id="nav-bar"></nav>
+    </div>
+    <script src="/script.js" type="module"></script>
   </body>
 </html>
