Add responsive navbar animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img id="profile-pic" src="/images/header_step0.svg" />
     </div>
     <div id="cause-scroll-div">
-      <nav id="nav-bar"></nav>
+      <nav id="nav-bar" class="hidden"></nav>
     </div>
     <script src="/script.js" type="module"></script>
   </body>
